# AutomousRover_StarkHacks

./: README.md
.github/workflows/: build.yml
10_docs/: README.md
10_docs/architecture/: control_architecture.md  sensor_fusion.md  system_overview.md
10_docs/hardware/: bill_of_materials.md  power_system.md  wiring_diagram.md
10_docs/setup/: amd_minipc_setup.md  arduino_setup.md  dependencies.md
20_hardware/: README.md
20_hardware/arduino/: README.md
20_hardware/cad/: README.md
30_ros2_ws/: README.md  frames_2026-04-18_07.01.46.gv  frames_2026-04-18_14.59.04.gv
30_ros2_ws/src/guardian_bringup/: README.md  package.xml  setup.cfg  setup.py
30_ros2_ws/src/guardian_bringup/config/: ekf_params.yaml  ekf_params_real.yaml  guardian.rviz  guardian_mapping.rviz  guardian_nav.rviz  guardian_real.rviz  nav2_params.yaml  nav2_params_real.yaml  navigate_to_pose.xml  robot_params.yaml
30_ros2_ws/src/guardian_bringup/guardian_bringup/: demo_mission_node.py  dummy_odom_node.py
30_ros2_ws/src/guardian_bringup/launch/: guardian_full.launch.py  guardian_mapping.launch.py  guardian_nav.launch.py  guardian_real.launch.py  guardian_sim.launch.py  guardian_teleop.launch.py
40_lerobot/: README.md
40_lerobot/configs/: guardian_policy_config.yaml
40_lerobot/datasets/: README.md
40_lerobot/training/: README.md
50_teleop/: README.md
50_teleop/quest_bridge/: README.md  websocket_bridge.py
60_scripts/: README.md  build_workspace.sh  run_guardian.sh  setup_amd_minipc.sh  test_motors.py
70_media/: README.md
70_media/demo/: README.md
70_media/photos/: README.md
(+51 files in other folders)
