<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guardian_bringup</name>
  <version>0.1.0</version>
  <description>Launch files, EKF config, and Nav2 config for GUARDIAN</description>
  <maintainer email="phillipp@example.com">Phillipp Gery</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>guardian_description</exec_depend>
  <exec_depend>guardian_drive</exec_depend>
  <exec_depend>guardian_localization</exec_depend>
  <exec_depend>guardian_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>l3xz_sweep_scanner</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
